# Bezugszeichenpr-fvorrichtung

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  GEMINI.md  HUMANS.md  IMPLEMENTATION_PLAN.md  PDF_FEATURE.md  PDF_SETUP.md  README.md  README_QT_PORT.md  build_qt_static.bat  main.cpp  res.rc  test_onnx_load.cpp
.github/workflows/: ci.yml
cmake/: EmbedModels.cmake  EmbedModelsUncompressed.cmake  MuPDFConfig.cmake  OpenCVConfig.cmake  compress_models.py  embed_models.py
include/: AnalysisContext.h  BZComparator.h  EnglishTextAnalyzer.h  ErrorDetectorHelper.h  ErrorNavigator.h  GermanTextAnalyzer.h  ImageCanvas.h  ImageDocument.h  ImageViewerWindow.h  MainWindow.h  ModelLoader.h  OCREngine.h  OrdinalDetector.h  PDFLoader.h  PDFPanel.h  PdfDocument.h  RE2RegexHelper.h  ReferenceDatabase.h  RegexPatterns.h  TextAnalyzer.h  TextScanner.h  TimerHelper.h  UIBuilder.h  german_stem.h  german_stem_umlaut_preserving.h  stem_collector.h  stemming.h  utils.h  utils_core.h
models/: QUICK_START.md  README.md  convert_yolo_to_onnx.py  optimize_onnx.py  prepare_models.sh  trocr_vocab.txt
src/: BZComparator.cpp  EnglishTextAnalyzer.cpp  ErrorDetectorHelper.cpp  ErrorNavigator.cpp  GermanTextAnalyzer.cpp  ImageCanvas.cpp  ImageDocument.cpp  ImageViewerWindow.cpp  MainWindow.cpp  ModelLoader.cpp  OCREngine.cpp  OrdinalDetector.cpp  PDFLoader.cpp  PDFPanel.cpp  PdfDocument.cpp  RE2RegexHelper.cpp  TextAnalyzer.cpp  TextScanner.cpp  UIBuilder.cpp  stem_collector.cpp  utils.cpp  utils_core.cpp
tests/: CMakeLists.txt  README.md  test_coverage_gap.cpp  test_english_analyzer.cpp  test_error_detector.cpp  test_german_analyzer.cpp  test_image_viewer.cpp  test_main_window.cpp  test_ordinal_detector.cpp  test_pdf_document.cpp  test_re2_regex_helper.cpp  test_text_scanner.cpp  test_utils.cpp
